# navigating-nowhere

./: .gitignore  .gitmodules  README.md  build_repo  tmp_cams.txt
src/champ/champ_config/config/move_base/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml
src/champ/champ_config/launch/: gazebo.launch
src/champ/champ_gazebo/launch/: gazebo.launch
src/champ/champ_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml
src/champ/champ_navigation/rviz/: navigate.rviz
src/hector_slam/hector_mapping/launch/: mapping_default.launch
src/mobile_manipulator/: package.xml
src/mobile_manipulator/launch/: mobile_manipulator_gazebo.launch
src/mobile_manipulator/maps/: .test.pgm.swp
src/mobile_manipulator_body/: package.xml
src/mobile_manipulator_body/urdf/: mobile_manipulator.urdf
src/my_spot/: CMakeLists.txt  package.xml
src/my_spot/launch/: slam_sim.launch
src/my_spot/rviz/: slam.rviz
src/my_spot/worlds/: cube.world
src/my_spot_description/: CMakeLists.txt  package.xml
src/my_spot_description/gazebo/: sensors.gazebo
src/my_spot_description/launch/: description.launch  urdf.rviz
src/my_spot_description/urdf/: spot.urdf  spot.urdf.xacro  spot_leg.urdf.xacro
src/robot_setup_tf/: package.xml  rviz_config.rviz
src/robot_setup_tf/src/: tf_broadcaster.py  tf_listener.py
src/robots/configs/spot_config/config/move_base/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml  move_base_params.yaml
src/robots/configs/spot_config/launch/: gazebo.launch
