<?xml version="1.0"?>
<package format="2">
  <name>my_spot</name>
  <version>0.1.0</version>
  <description>implementatin of spot pkgs for a demo</description>
  <maintainer email="alfred.ingi.wilmot@gmail.com">Alfred Wilmot</maintainer>
  <author>Alfred Wilmot</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
